Fixed word wrapping issues on cards

--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -413,6 +413,7 @@
 }
 
 .vendor-card-name {
+  word-wrap: break-word !important;
   color: #000;
   font-family: 'Libre Baskerville', serif;
   font-weight: bolder;
